--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,6 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!--         <nav class="navbar fixed-top navbar-expand-lg navbar-expand">
@@ -16,7 +15,9 @@
             <button type="button" class="btn btn-outline-danger me-2" *ngIf="!ngAuthService.userState"><a class="nav-link" (click)="ngAuthService.SignOut()" routerLinkActive="active" style="cursor: pointer;"> Sign in</a></button>
         </form>
          </nav> -->
-         <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark justify-content-end">
+
+         
+<!--          <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark justify-content-end">
             <div class="container-fluid">
             <img width="8%" id="icon" src="https://www.pngkit.com/png/detail/592-5921702_line-graph-going-up-crescimento-vetor-png.png">
             <a class="navbar-brand" href="/list-crypto">Crypto-Chads.com</a>
@@ -25,15 +26,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <button type="button" class="btn btn-success ml-auto me-2" id="goToMarket"><a class="nav-link" routerLink="list-crypto">View Crypto Market</a></button>
-            </li>
-            <li class="nav-item">
-                <button type="button" class="btn btn-sm btn-outline-secondary me-2" *ngIf="ngAuthService.userState"  id="dashboard"><a class="nav-link" routerLink="/dashboard" routerLinkActive="active"> Dashboard </a></button>
-            </li>       
-                <li class="nav-item text-center" id="signup-btn"  *ngIf="!ngAuthService.userState">
+            <div class="collapse navbar-collapse navbar-expand-lg" id="navbarSupportedContent">
+                <button type="button" class="btn btn-success" id="goToMarket"><a class="nav-link" routerLink="list-crypto">View Crypto Market</a></button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" *ngIf="ngAuthService.userState" id="dashboard"><a class="nav-link" routerLink="/dashboard" routerLinkActive="active"> Dashboard </a></button>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item text-center" id="signup-btn"  *ngIf="!ngAuthService.userState">
                         <a href="/sign-up" class="nav-link" data-toggle="modal"><span class="fa fa-user"></span><span class="d-none d-sm-inline d-xl-block px-1">Sign Up</span></a>
                     </li>
                     <li class="nav-item text-center" id="login-btn" *ngIf="!ngAuthService.userState">
@@ -45,12 +42,16 @@
                 </ul>
             </div>
         </div>
-        </nav>
+        </nav> -->
+        <app-navbar></app-navbar>
 
         <router-outlet></router-outlet>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
 </body>
-
-
-<script src="../assets/custom.js"></script>
 
 </html>
