--- a/src/app/components/details-crypto/details-crypto.component.css
+++ b/src/app/components/details-crypto/details-crypto.component.css
@@ -24,6 +24,7 @@
   
   #wrapper > div {
     font-size: 0;
+    margin-top: 5%;
   }
   
   .card.course-id-1 .card-backgrund-color {
@@ -357,4 +358,51 @@
     width: 35%;
     margin-left: 3%;
     margin-right: 3%;
+  }
+
+  @media screen and (max-width: 1300px){
+    .homecard{
+      height:15vh;
+      margin-right: 3.5%;
+    }
+  }
+    
+  @media screen and (max-width: 1100px) {
+    .card {
+      border: 3px solid #424242;
+      border-radius: 20px;
+      width: calc(80% - 40px);
+      min-width: 300px;
+      border-radius: 5px;
+      background-color: white;
+      text-align: center;
+      height: 300px;
+      position: relative;
+      margin: 2%;
+      cursor: pointer;
+      -webkit-transition: -webkit-transform .2s ease-in, box-shadow .1s ease-in;
+      /*   -moz-transition: -moz-transform .1s ease-in, box-shadow .1s ease-in; */
+      transition: transform .2s ease-in, box-shadow .1s ease-in;
+      box-shadow: 0px 2px 2px #dfe6f0;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    .card {
+      border: 3px solid #424242;
+      border-radius: 20px;
+      width: calc(80% - 40px);
+      min-width: 300px;
+      border-radius: 5px;
+      background-color: white;
+      text-align: center;
+      height: 290px;
+      position: relative;
+      margin: 2%;
+      cursor: pointer;
+      -webkit-transition: -webkit-transform .2s ease-in, box-shadow .1s ease-in;
+      /*   -moz-transition: -moz-transform .1s ease-in, box-shadow .1s ease-in; */
+      transition: transform .2s ease-in, box-shadow .1s ease-in;
+      box-shadow: 0px 2px 2px #dfe6f0;
+    }
   }
