--- a/src/app/components/list-crypto/list-crypto.component.css
+++ b/src/app/components/list-crypto/list-crypto.component.css
@@ -29,5 +29,49 @@
 
   .card{
       border: 0;
+      height: 10%;
+  }
+
+  @media screen and (max-width: 1300px) {
+
+    .homecard{
+      border:1px solid #eee;
+      padding:1em;
+      margin:1em;
+      height:10vh;
+      position:relative;
+      box-shadow:0px 0px 3px 3px #f7f7f7;
+    }
+
+  }
+  
+  @media screen and (max-width: 1100px) {
+    .homecard{
+      border:1px solid #eee;
+      padding:1em;
+      margin:1.5em;
+      height:20vh;
+      position:relative;
+      box-shadow:0px 0px 3px 3px #f7f7f7;
+    }
+    .cards-list{
+      width:100%;
+      margin:1em auto;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    .homecard{
+      border:1px solid #eee;
+      padding:1em;
+      margin:1.5em;
+      height:20vh;
+      position:relative;
+      box-shadow:0px 0px 3px 3px #f7f7f7;
+    }
+    .cards-list{
+      width:100%;
+      margin:1em auto;
+    }
   }
   
