--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -27,7 +27,8 @@
     background: #FFF;
     border-radius: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
-    border: 2.5px solid #5498FD;
+    border: 4px double #5498FD;
+    background-color: #ededed;
   }
   
   .left {
@@ -42,6 +43,7 @@
   }
   .left input{
       margin-top: 0%;
+      border-radius: 5px;
   }
   .left #forgot-password{
       margin-top: 28.7%;
@@ -124,7 +126,7 @@
   
   .right {
     position: absolute;
-    top: 0;
+    top: 30%;
     right: 0;
     box-sizing: border-box;
     padding: 40px;
@@ -146,7 +148,7 @@
   .right input {
     width: 100%;
     margin: 0 auto;
-    margin-top: 18%;
+    margin-top: 28%;
   }
   
   button.social-signin {
@@ -187,5 +189,10 @@
 
   .input{
       margin-top: 15%;
+  }
+
+  h1{
+    font-size: 250%;
+    font-weight: 400;
   }
   
