--- a/src/app/components/wishlist-row/wishlist-row.component.css
+++ b/src/app/components/wishlist-row/wishlist-row.component.css
@@ -25,6 +25,7 @@ img{
     height:12vh;
     position:relative;
     box-shadow:0px 0px 3px 3px #f7f7f7;
+    border-radius: 10px;
   }
   .homecard:hover{
     background:#d9d9d9;
@@ -77,4 +78,25 @@ img{
   }
   .red{
       color:red;
+  }
+
+  @media screen and (max-width: 1300px){
+    .homecard{
+      height:15vh;
+      margin-right: 3.5%;
+    }
+  }
+    
+  @media screen and (max-width: 1100px) {
+    .homecard{
+      height:18vh;
+      margin-right: 5%;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    .homecard{
+      height:22vh;
+      margin-right: 7%;
+    }
   }
