--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body id="body">
 <!--         <nav class="navbar fixed-top navbar-expand-lg navbar-expand">
         <form class="container-fluid justify-content-start">
             <img width="8%" id="icon" src="https://www.pngkit.com/png/detail/592-5921702_line-graph-going-up-crescimento-vetor-png.png">
@@ -43,9 +43,11 @@
             </div>
         </div>
         </nav> -->
-        <app-navbar></app-navbar>
+        <div id="content">
+            <app-navbar></app-navbar>
 
-        <router-outlet></router-outlet>
+            <router-outlet></router-outlet>
+        </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
