--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -36,7 +36,7 @@ body {
     border-radius: 10%;
     border: 6px double #5498FD;
     margin: 0 auto;
-    width: 20%;
+    width: 25%;
     padding: 2%;
     background-color: #ededed;
   }
@@ -136,16 +136,25 @@ body {
   }
 
   @media screen and (max-width: 1300px) {
+    .profile-sidebar {
+      width: 30%;
+    }
     .profile-usertitle-job {
       font-size: x-small;
     }
   }
   @media screen and (max-width: 1100px) {
+    .profile-sidebar {
+      width: 35%;
+    }
     .profile-usertitle-job {
       font-size: 50%;
     }
   }
   @media screen and (max-width: 900px) {
+    .profile-sidebar {
+      width: 40%;
+    }
     .profile-usertitle-job {
       font-size: 40%;
     }
