--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,14 +14,14 @@
             <li class="nav-item active">
                 <button type="button" class="btn btn-sm btn-outline-secondary" *ngIf="ngAuthService.userState" id="dashboard"><a class="nav-link" routerLink="/dashboard" routerLinkActive="active"> Dashboard </a></button>
             </li>
-            <li class="nav-item active user" id="signup-btn"  *ngIf="!ngAuthService.userState">
-                <a href="/sign-up" class="nav-link" data-toggle="modal"><span class="d-none d-sm-inline d-xl-block px-1">Sign Up</span></a>
+            <li class="nav-item active" id="signup-btn"  *ngIf="!ngAuthService.userState">
+                <a href="/sign-up" class="nav-link" data-toggle="modal" type="button" routerLink="/sign-up"><span class="d-none d-sm-inline d-xl-block px-1">Sign Up</span></a>
             </li>
-            <li class="nav-item active user" id="login-btn" *ngIf="!ngAuthService.userState">
-                <a href="/sign-in" class="nav-link" data-toggle="modal"><span class="d-none d-sm-inline d-xl-block px-1">Log In</span></a>
+            <li class="nav-item active" id="login-btn" *ngIf="!ngAuthService.userState">
+                <a href="/sign-in" class="nav-link" data-toggle="modal" (click)="ngAuthService.SignOut()"><span class="d-none d-sm-inline d-xl-block px-1">Log In</span></a>
             </li>
-            <li class="nav-item active user" id="logout-btn" *ngIf="ngAuthService.userState">
-                <a href="/sign-in" class="nav-link" data-toggle="modal" (click)="ngAuthService.SignOut()">Logout</a>
+            <li class="nav-item active" id="logout-btn" *ngIf="ngAuthService.userState">
+                <a href="/sign-in" class="nav-link" data-toggle="modal" (click)="ngAuthService.SignOut()"><span class="d-none d-sm-inline d-xl-block px-1">Logout</span></a>
             </li>
         </ul>
     </div>
