--- a/src/app/components/details-crypto/details-crypto.component.html
+++ b/src/app/components/details-crypto/details-crypto.component.html
@@ -42,6 +42,7 @@
           <p><span class="card-progress-bar"><span class="card-progress-bar-status card-backgrund-color" data-status="50"></span></span>
           </p>
         </footer>   
+        <p> {{coin.dbID}} </p>
         </article>         
     </div>
   </div>
